@@ -1911,6 +1911,7 @@ def processExtractedText(objKey, bodyText, refText, figureText, starMethodText, 
     global existingRefKeyList
     global dataKey
     global accList, refList, statusList, dataList, tagList, relevanceList 
+    global statusKey
 
     diagFile.write('\n%s:processExtractedText()\n' % (mgi_utils.date()))
 
@@ -1955,6 +1956,25 @@ def processExtractedText(objKey, bodyText, refText, figureText, starMethodText, 
     if objType == userSupplement:
         dataSuppKey = suppAttachedKey
         count_userSupplement += 1
+
+        #
+        # flr2-56/if GXD Status = Not Routed or Rejected, then set GXD Status = New
+        #
+        gxdCheck = db.sql('''
+                select _assoc_key from bib_workflow_status 
+                where _refs_key = %s
+                and isCurrent = 1 
+                and _group_key = 31576665
+                and _status_key in (31576669,31576672)
+                ''' % (existingRefKey), 'auto')
+        if len(gxdCheck) == 1:
+            updateSQLAll.append('update BIB_Refs set _ModifiedBy_key = %s, modification_date = now() where _Refs_key = %s;\n' \
+                % (userKey, existingRefKey))
+            updateSQLAll.append('update bib_workflow_status set isCurrent = 0 where _assoc_key = %s;\n' % (gxdCheck[0]['_assoc_key']))
+            statusRow = '%s|%s|31576665|71027551|1|%s|%s|%s|%s' % (statusKey, existingRefKey, userKey, userKey, loaddate, loaddate)
+            statusList.append(statusRow)
+            statusKey += 1
+
     elif objType == userPDF:
         dataSuppKey = suppKey
         count_userPDF += 1
